--- a/src/modules/products/products.scss
+++ b/src/modules/products/products.scss
@@ -294,8 +294,22 @@
 
 //--------------------
 
+.mobileFormOverlay {
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.59);
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  transition: 300ms all ease;
+}
+
 .mobileFormContainer {
   @include padding(30);
+  background-color: white;
+  width: 80%;
+  margin-top: 12vh;
+  border-radius: 10px;
 }
 
 .searchField {
