--- a/src/modals/signInModal/signInModal.scss
+++ b/src/modals/signInModal/signInModal.scss
@@ -116,7 +116,10 @@
   color: $black-ten;
 
   span {
-    color: $primary-color;
+    a {
+      color: $primary-color;
+
+    }
   }
 
   .bold {
@@ -167,6 +170,7 @@
   color: $bright-red;
   position: absolute;
   top: 7rem;
+
   &::first-letter {
     text-transform: capitalize;
   }
