--- a/src/modules/PrivacyAndPolicy/privacyAndPolicy.scss
+++ b/src/modules/PrivacyAndPolicy/privacyAndPolicy.scss
@@ -10,10 +10,11 @@
     li {
       list-style-type: decimal;
       padding-left: 1rem;
-
+      margin-bottom: 1rem;
+      font-family: $roboto-medium;
       span {
         text-transform: uppercase;
-        font-family: $roboto-medium;
+        font-family: $roboto-regular;
       }
 
       ol {
@@ -26,6 +27,7 @@
   }
   h1 {
     margin-bottom: 2rem;
+    color: $black-five;
   }
 }
 
