page name changes

--- a/src/modals/forgotPasswordModal/forgotPasswordModal.scss
+++ b/src/modals/forgotPasswordModal/forgotPasswordModal.scss
@@ -11,6 +11,7 @@
     background-color: white;
     @include padding(40, 50);
     text-align: center;
+    @include borderRadius(5);
 
     .header {
       font-family: $roboto-medium;
