--- a/src/modules/about/about.scss
+++ b/src/modules/about/about.scss
@@ -4,6 +4,29 @@
 @import '../../variables/breakpoints';
 
 .aboutContainer {
+  @include margin(100, 0);
+  .aboutCover {
+    @include height(600);
+    position: relative;
+    background: url('/images/about_cover.jpg');
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat; 
+  }
+
+  .h3Class {
+    @include fontSize(48);
+    line-height: 4rem;
+    @include letterSpacing(1.44);
+    width: 95%;
+    text-align: center;
+    
+    @include mobile {
+      @include fontSize(35);
+      width: 98%;
+    }  
+  }
+
   .h4Class {
     @include fontSize(30);
     width: 92%;
@@ -17,56 +40,92 @@
     color: #484848;
     line-height: 1.8rem;
   }
+
+  .pSmallClass {
+    @include fontSize(14);
+    @include letterSpacing(.31);
+    color: #ffffff;
+    line-height: 1.6rem;
+  }
 }
 
 .memberContainer {
   text-align: center;
-  .memberName {
-    font-family: $roboto-medium;
-    @include fontSize(22);
-    color: $black;
-  }
+  position: relative;
+  background-color: #f4f4f4;
+  @include borderRadius(10);
 
-  .memberPosition {
-    font-family: $roboto-regular;
-    @include fontSize(18);
-    color: #959595;
-    margin-top: -0.5rem;
+  .memeberInfo {  
+    @include padding(20,10);
+    @include borderRadius(10);
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+
+    .memberName {
+      font-family: $roboto-medium;
+      @include fontSize(22);
+      color: $black;
+    }
+  
+    .memberPosition {
+      font-family: $roboto-regular;
+      @include fontSize(18);
+      color: #959595;
+    }
+
   }
 
   .imageCover {
     @include borderRadius(10);
     cursor: pointer;
     width: 100%;
-    position: relative;
     background-size: cover; 
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 
     &:before {
       content: "";
       display: block;
-      padding-top: 100%;
+      padding-top: 110%;
     }
 
     .hoverContainer {
       @include borderRadius(10);
-      transition: .5s cubic-bezier(0.4, 0, 1, 1);
-      background-color: rgba(255, 0, 0, 0.41);
+      @include padding(0, 20);
+      transition: .8s cubic-bezier(0.4, 0, 1, 1);
+      background-color: rgba(92, 55, 99, 0.9);
       opacity: 0;
       position: absolute;
-      padding-bottom: 2rem;
-      top: 0;
-      height: 100%;
+      bottom: 0;
+      left: 0;
+      height: 0%;
       width: 100%;
       color: white;
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
     }
 
     &:hover {
       .hoverContainer {
+        height: 85%;
         opacity: 1;
       }
     }
   }
+}
+
+.iconContainer {
+  a {
+    img {
+      height: 1.52rem;
+      width: 1.52rem;
+      margin-left: 1rem;
+      display: inline-block;
+    }
+
+    &:first-child {
+      img {
+        margin-left: 0;
+      }
+    }
+  }
+  margin-bottom: 2rem;
 }
