Collapse added to side section
css

--- a/src/modules/wishlist/wishlist.scss
+++ b/src/modules/wishlist/wishlist.scss
@@ -11,6 +11,9 @@
   color: $black;
   @include fontSize(24);
   cursor: pointer;
+  background: url('/images/filter-dropdown.png') right no-repeat;
+  padding-right: 2.5rem;
+  width: max-content;
 }
 
 .vendorList {
