--- a/src/variables/_colors.scss
+++ b/src/variables/_colors.scss
@@ -44,3 +44,4 @@ $greyish-brown-four: #534d4d;
 $greyish-brown-five: #505050;
 $medium-pink: #f03690;
 $lavender-pink: #c86dd7;
+$warm-grey-eight-two: #9b9b9b;
