home page ui fixes

--- a/src/components/HorizontalSlider/horizontalSlider.scss
+++ b/src/components/HorizontalSlider/horizontalSlider.scss
@@ -64,7 +64,7 @@
 }
 
 .ceremonyCard {
-  border: solid 1.5px $medium-pink;
+  border: solid 1.5px #ffc8df;
   box-shadow: 6px 11px 32px 0 rgba(41, 26, 204, 0.12);
   border-radius: 3px;
   padding: 1rem;
