--- a/src/modules/products/products.scss
+++ b/src/modules/products/products.scss
@@ -127,7 +127,7 @@
     border-radius: 5px;
     box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.3);
     background-size: 10px;
-    background: url("/images/filter-search-icon.png") center center no-repeat $primary-color;
+    background: url("/images/filter-search-icon.png") center center no-repeat $secondary-color;
     border: none;
     @include width(70);
     @include height(60);
