home margin fix

--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -726,11 +726,11 @@ a.button {
   }
 
   &:nth-child(even) {
-    margin-right: -2.4rem;
+    // margin-right: -2.4rem;
   }
 
   &:nth-child(odd) {
-    margin-left: -2.4rem;
+    // margin-left: -2.4rem;
   }
 
   &.imageCardReverse {
