--- a/src/modals/forgotPasswordModal/forgotPasswordModal.scss
+++ b/src/modals/forgotPasswordModal/forgotPasswordModal.scss
@@ -13,29 +13,41 @@
     text-align: center;
     @include borderRadius(5);
 }
-  .header {
+
+.header {
+  font-family: $roboto-medium;
+  @include letterSpacing(0.66);
+  @include fontSize(22);
+}
+
+.subheading {
+  font-family: $roboto-regular;
+  @include fontSize(14);
+  text-align: left;
+}
+
+.message {
+  font-family: $roboto-regular;
+  @include fontSize(18);
+  @include letterSpacing(0.54);
+  margin-top: 2.5rem;
+
+  span {
     font-family: $roboto-medium;
-    @include letterSpacing(0.66);
-    @include fontSize(22);
-    margin-bottom: 2.5rem;
+
   }
+}
 
-  .message {
-    font-family: $roboto-regular;
-    @include fontSize(18);
-    @include letterSpacing(0.54);
+.error {
+  @include fontSize(15);
+  color: $bright-red;
+  margin-top: .5rem;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
 
-    span {
-      font-family: $roboto-medium;
+  // wishlist - add collaborator specific popup styles
 
-    }
-  }
 
-  .error {
-    @include fontSize(15);
-    color: $bright-red;
-    margin-top: .5rem;
-    position: absolute;
-    left: 0;
-    right: 0;
-  }
+
