--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -460,6 +460,13 @@ button {
 .justify-center {
   justify-content: center;
 }
+
 .row-reverse {
   flex-direction: row-reverse;
 }
+
+// #boxsection {
+//   // position: absolute;
+//   left: 50%;
+//   top: 50%;
+// }
